--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL='postgres://maksimw:462462@localhost:5432/flashCards'
+DATABASE_URL='postgres://test:rfgcbrfv@localhost:5432/flashCards'
